Update SignUp/Login form

--- a/SignUp-Login-Form/login.html
+++ b/SignUp-Login-Form/login.html
@@ -17,8 +17,8 @@
             <div class="form-group">
                 <label for="password">Password</label><br>
                 <input type="password" id="email" name="email" placeholder="enter password" required>
-            </div class="login-options"><br>
-            <div>
+            </div><br>
+            <div class="login-options">
                 <label>
                     <input type="checkbox" name="remember"> Remember me
                 </label>
