--- a/search-functionality/index.html
+++ b/search-functionality/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <form class="search-container" id="searchContainer">
-        <input type="text" id="searchInput" placeholder="Search"><br>
-        <button type="submit" id="searchButton">Search</button>
-    </form>
-    <div id="results"></div>
+    <section class="hero-img">
+        <form class="search-container" id="searchContainer">
+            <input type="text" id="searchInput" placeholder="Search"><br>
+            <button type="submit" id="searchButton">Search</button>
+        </form>
+    </section>
+    <div id="results">
+        <div id="textResults"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
