--- a/navbar/index.html
+++ b/navbar/index.html
@@ -7,15 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="logo">My Website</div>
-        <div class="toggle-btn" id="toggle-btn">&#9776;</div>
-        <ul class="menu" id="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</li>
-            <li><a href="#">Services</li>
-            <li><a href="#">Contact</li>
-        </ul>
+    <nav>
+        <div class="navbar">
+            <div class="logo" id="logo">
+                <img src="LogoSample.jpg" alt="logo">
+            </div>
+            <div class="toggle-btn" id="toggle-btn">&#9776;</div>
+            <ul class="menu" id="nav-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</li>
+                <li><a href="#">Services</li>
+                <li><a href="#">Contact</li>
+            </ul>
+        </div>
     </nav>
     <script src="script.js"></script>
 </body>
