--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -13,5 +13,6 @@
         <button id="getWeather">Get weather</button>
     </form>
     <div id="displayWeather"></div>
+    <script src="script.js"></script>
 </body>
 </html>
