--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
@@ -69,11 +69,16 @@
         <h2>Pricing</h2>
      </section>
      
-     <section id="reviews" class="reviews-section">
+     <section id="reviews" class="review-section">
         <h2>Customer Reviews</h2>
         <ul class="review-list">
 
         </ul>
      </section>
+
+     <footer id="contact" class="contact-section">
+        <h2>Contact Us</h2>
+        <p>Email: info@je.com</p>
+     </footer>
 </body>
 </html>
