--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -18,10 +18,10 @@
                 <img src="LogoSample.jpg" alt="Logo">
             </div>
                 <ul>
-                    <li><a href="#">Features</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Reviews</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#pricing">Pricing</a></li>
+                    <li><a href="#reviews">Reviews</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
         </nav>
      </header>
@@ -39,7 +39,7 @@
 
      <section id="features" class="features-section">
         <div class="feature-header">
-            <h2>What we offer</h2>
+            <h2>Why should you patronize us?</h2>
                 <ul>
                         <li>
                             Comfortable and Durable
@@ -47,7 +47,7 @@
                         </li>
                         <li>
                             Sustainable Practices
-                            <p>Join us in making a difference with our       eco-friendly materials and ethical manufacturing processes, reflecting our commitment to social responsibility</p>
+                            <p>Join us in making a difference with our eco-friendly materials and ethical manufacturing processes, reflecting our commitment to social responsibility</p>
                         </li>
                         <li>
                             Distinctive Aesthetics
@@ -67,6 +67,7 @@
      
      <section id="pricing" class="pricing-section">
         <h2>Pricing</h2>
+        <p><strong>Price:</strong> <span id ="price">$99.99</span></p>
      </section>
      
      <section id="reviews" class="review-section">
@@ -78,7 +79,13 @@
 
      <footer id="contact" class="contact-section">
         <h2>Contact Us</h2>
-        <p>Email: info@je.com</p>
+        <p>Email: jeinfo@gmail.com</p>
+        <div class="social-media">
+            <a href="https://www.twitter.com"><img src="twitter.png" alt="twitter"></a>
+            <a href="https://www.instagram.com"><img src="instagram.png" alt="instagram"></a>
+            <a href="https://www.facebook.com"><img src="facebook.png" alt="facebook"></a>
+        </div>
      </footer>
+     <script src="script.js"></script>
 </body>
 </html>
