--- a/calculator/index.html
+++ b/calculator/index.html
@@ -33,5 +33,6 @@
             <input  type="button" value="=" class="button button1"/>
 
         </div>
+        <script src="script.js"></script>
 </body>
 </html>
