--- a/Quiz-app/index.html
+++ b/Quiz-app/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap');
+    </style>
 </head>
 <body>
     <div class="container">
         <h1>Quiz App</h1>
         <form id="quiz-form">
             <div class="question">
-                <p>1. What is the capital of France</p>
+                <p>1. What is the capital of France?</p>
                 <label><input type="radio" name="q1" value="a"> Berlin</label>
                 <label><input type="radio" name="q1" value="b"> Madrid</label>
                 <label><input type="radio" name="q1" value="c"> Paris</label>
@@ -37,6 +41,36 @@
                 <label><input type="radio" name="q5" value="a"> The assassination of the Archduke Franz Ferdinand</label>
                 <label><input type="radio" name="q5" value="b"> The invasion of Poland</label>
                 <label><input type="radio" name="q5" value="c"> The treaty of Versailles</label>
+            </div>
+            <div class="question">
+                <p>6. Which ancient civilization built the pyramids?</p>
+                <label><input type="radio" name="q6" value="a"> The Romans</label>
+                <label><input type="radio" name="q6" value="b"> The invasion of Poland</label>
+                <label><input type="radio" name="q6" value="c"> The treaty of Versailles</label>
+            </div>
+            <div class="question">
+                <p>7. Who discovered pencillin</p>
+                <label><input type="radio" name="q7" value="a"> Alexander Fleming</label>
+                <label><input type="radio" name="q7" value="b"> Marie Curie</label>
+                <label><input type="radio" name="q7" value="c"> Issac Newton</label>
+            </div>
+            <div class="question">
+                <p>8. When did berlin Wall fall, marking the end of the cold war?</p>
+                <label><input type="radio" name="q8" value="a"> 1985</label>
+                <label><input type="radio" name="q8" value="b"> 1989</label>
+                <label><input type="radio" name="q8" value="c"> 1991</label>
+            </div>
+            <div class="question">
+                <p>9. What was the name of the ship that brought the pilgrims to America in 1620</p>
+                <label><input type="radio" name="q9" value="a"> The Mayflower</label>
+                <label><input type="radio" name="q9" value="b"> The Santa Maria</label>
+                <label><input type="radio" name="q9" value="c"> The Endeavour</label>
+            </div>
+            <div>
+                <p> 10. Who was the first person to circumnavigate the globe</p>
+                <label><input type="radio" name="q10" value="a"> Ferdinand Magellan</label>
+                <label><input type="radio" name="q10" value="b"> Christopher Columbus</label>
+                <label><input type="radio" name="q10" value="c"> Vasco da Gama</label>
             </div>
         </form>
     </div>
