--- a/Quiz-app/index.html
+++ b/Quiz-app/index.html
@@ -30,13 +30,14 @@
                 <label><input type="radio" name="q2" value="a"> 1912</label>
                 <label><input type="radio" name="q2" value="b"> 1905</label>
                 <label><input type="radio" name="q2" value="c"> 1898</label>
+            </div>
             <div class="question">
                 <p>4. Who was the known as the "Maid of Orleans" and led the French army to several important victories during the Hundred Years' War?</p>
                 <label><input type="radio" name="q4" value="a"> Joan of Arc</label>
                 <label><input type="radio" name="q4" value="b"> Catherine de' Medici</label>
                 <label><input type="radio" name="q4" value="c"> Marie Antoinette</label>
             </div>
-            <div>
+            <div class="question">
                 <p>5. What was the main cause of the World War 1?</p>
                 <label><input type="radio" name="q5" value="a"> The assassination of the Archduke Franz Ferdinand</label>
                 <label><input type="radio" name="q5" value="b"> The invasion of Poland</label>
@@ -72,7 +73,10 @@
                 <label><input type="radio" name="q10" value="b"> Christopher Columbus</label>
                 <label><input type="radio" name="q10" value="c"> Vasco da Gama</label>
             </div>
+            <button type="submit">Submit</button>
         </form>
+        <div id="result"></div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
