--- a/blog-form/index.html
+++ b/blog-form/index.html
@@ -40,6 +40,7 @@
                 <input type="text" id="name" name="name" required>
                 <label for="message">Message</label>
                 <textarea id="message" name="message" required></textarea>
+                <button type="submit">Send</button>
             </form>
         </section>
     </main>
