--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -85,7 +85,7 @@
                         </tr>
                         <tr>
                             <td>103327</td>
-                            <td>Juloe Smith</td>
+                            <td>Julie Smith</td>
                             <td>admin@onlinetuts.com</td>
                             <td>6th Sep 2025</td>
                             <td><span class="status pending">Pending</span></td>
@@ -93,6 +93,20 @@
                         <tr>
                             <td>103328</td>
                             <td>Williams</td>
+                            <td>admin@onlinetuts.com</td>
+                            <td>6th Sep 2025</td>
+                            <td><span class="status pending">Pending</span></td>
+                        </tr>
+                        <tr>
+                            <td>103329</td>
+                            <td>Clinton Harris</td>
+                            <td>admin@onlinetuts.com</td>
+                            <td>6th Sep 2025</td>
+                            <td><span class="status completed">Completed</span></td>
+                        </tr>
+                        <tr>
+                            <td>103330</td>
+                            <td>Michelle Paulina</td>
                             <td>admin@onlinetuts.com</td>
                             <td>6th Sep 2025</td>
                             <td><span class="status pending">Pending</span></td>
@@ -121,6 +135,6 @@
         </main>
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
