--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#">Customize</a></li>
                 </ul>
             </nav>
-            <div class="settings">|
+            <div class="sidebar-settings">
                 <ul>
                     <li><a href="#">Users</a></li>
                     <li><a href="#">Settings</a></li>
